SUBDIRS = threads crypto  logging  random  sockets  storage 

noninst_LTLIBRARIES = libdep.la

libdep_SOURCES = 

libdep_LIBADD = \
	threads/libthreads.la \
	crypto/libcrypto.la \
	logging/liblogging.la \
	random/librandom.la \
	sockets/libsockets.la \
	storage/libfsec.la storage/libfsnoec.la storage/libstorage.la	
