include_HEADERS = \
	CBNetworkAddressList.h \
	CBByteArray.h \
	CBTransactionOutput.h \
	CBVarInt.h \
	CBNetworkAddressManager.h \
	CBAssociativeArray.h \
	CBNode.h \
	CBNodeFull.h \
	CBValidator.h \
	CBSeedNodes.h \
	CBNodeHeadersOnly.h \
	CBBlockHeaders.h \
	CBGetBlocks.h \
	CBPeer.h \
	CBInventory.h \
	CBPingPong.h \
	CBBigInt.h \
	CBChainDescriptor.h \
	CBSanitiseOutput.h \
	CBInventoryItem.h \
	CBThreadPoolQueue.h \
	CBDependencies.h \
	CBValidationFunctions.h \
	CBChecksumBytes.h \
	CBScript.h \
	CBAlert.h \
	CBVersion.h \
	CBWIF.h \
	CBAddress.h \
	CBMerkleNode.h \
	CBTransaction.h \
	CBBase58.h \
	CBNetworkCommunicator.h \
	CBNetworkFunctions.h \
	CBMessage.h \
	CBBlock.h \
	CBNetworkAddress.h \
	CBAssert.h \
	CBHDKeys.h \
	CBObject.h \
	CBTransactionInput.h \
	CBConstants.h 
