INCLUDES = @CRYPTO_LIBS@ -I$(top_srcdir)/include

lib_LTLIBRARIES = libcbitcoin-random.la
libcbitcoin_random_la_SOURCES = CBRand.c
libcbitcoin_random_la_LIBADD = $(top_srcdir)/src/libcbitcoin.la
libcbitcoin_random_la_CFLAGS = -I$(top_srcdir)/include 
libcbitcoin_random_la_LDFLAGS = -module -shared 


